be-witchsaga/deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: witch-saga
spec:
  selector:
    matchLabels:
      app: witch-saga
  template:
    metadata:
      labels:
        app: witch-saga
    spec:
      containers:
        - name: witch-saga-service
          image: "localhost:5000/witch-saga-app:0.0.1-SNAPSHOT"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
