be-witchsaga/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: witch-saga-service
  labels:
    app: witch-saga-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: witch-saga-service
