be-witchsaga/deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.org/client-max-body-size: 100m
  labels:
    app: witch-saga-service
  name: witch-saga-ingress
spec:
  rules:
    - host: 192.168.91.168.nip.io
      http:
        paths:
          - backend:
              serviceName: witch-saga
              servicePort: 80
            path: /witch-saga/
